[project]
name = "greet-poetry"
version = "0.1.1.dev"
description = "This is a Python package template using Poetry."
authors = [{name="Oliver Quynh", email="<contact@oliverquynh.com>"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
    "poetry>=2.4.1",
]

[project.scripts]
greet = "greet.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "greet", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
isort = "^6.0.1"
mypy = "^1.15.0"
autoflake = "^2.3.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
target-version = ['py311', 'py312', 'py313']

[tool.isort]
line_length = 88
multi_line_output = 3
profile = "black"
